# rust-play

./: .gitignore  Cargo.toml
assets/: new_test.txt  vec_output.txt  write_and_update.txt
benches/: postgres_test.rs
src/: custom_struct.rs  lib.rs  main.rs
